# rudi-microservice/rudi-microservice-selfdata/openapi/rudi-selfdata-model.json
@@ -139,6 +139,12 @@
 							"datasetUuid": {
 								"type": "string",
 								"format": "uuid"
+							},
+							"status": {
+								"type": "array",
+								"items": {
+									"$ref": "#/components/schemas/SelfdataInformationRequestStatus"
+								}
 							}
 						}
 					}
